load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//:def.bzl", "go_image")

go_image(
    name = "image",
    directory = "/",
    files = [":tabulator"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/GoogleCloudPlatform/testgrid/cmd/tabulator",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/tabulator:go_default_library",
        "//util/gcs:go_default_library",
        "//util/metrics/prometheus:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "tabulator",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
