load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("//:def.bzl", "go_image")

go_image(
    name = "image",
    directory = "/",
    files = [":updater"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "updater",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/GoogleCloudPlatform/testgrid/cmd/updater",
    visibility = ["//visibility:private"],
    deps = [
        "//config:go_default_library",
        "//internal/result:go_default_library",
        "//metadata/junit:go_default_library",
        "//pb/config:go_default_library",
        "//pb/state:go_default_library",
        "//util/gcs:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_google_cloud_go//storage:go_default_library",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
        "@ml_vbom_util//sortorder:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//metadata/junit:go_default_library",
        "//pb/state:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
