load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("//:def.bzl", "go_image")

go_image(
    name = "image",
    directory = "/",
    files = [":updater"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "updater",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/GoogleCloudPlatform/testgrid/cmd/updater",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/updater:go_default_library",
        "//util/gcs:go_default_library",
        "//util/metrics:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//util/gcs:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
    ],
)
