load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["yaml2proto.go"],
    importpath = "github.com/GoogleCloudPlatform/testgrid/config/yamlcfg",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "//pb/config:go_default_library",
        "@io_k8s_sigs_yaml//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["yaml2proto_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pb/config:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
