load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["results.go"],
    importpath = "github.com/GoogleCloudPlatform/testgrid/internal/result",
    visibility = ["//:__subpackages__"],
    deps = [
        "//pb/state:go_default_library",
        "//pb/test_status:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["results_test.go"],
    embed = [":go_default_library"],
    deps = ["//pb/test_status:go_default_library"],
)
