load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["router.go"],
    data = ["README.md"],
    importpath = "github.com/GoogleCloudPlatform/testgrid/pkg/api",
    visibility = ["//visibility:public"],
    deps = [
        "//pb/api/v1:go_default_library",
        "//pkg/api/v1:go_default_library",
        "//util/gcs:go_default_library",
        "@com_github_go_chi_chi//:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//pkg/api/v1:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["router_http_test.go"],
    data = ["README.md"],
    embed = [":go_default_library"],
)
