load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "flakiness.go",
        "summary.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/testgrid/pkg/summarizer",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "//internal/result:go_default_library",
        "//pb/config:go_default_library",
        "//pb/state:go_default_library",
        "//pb/summary:go_default_library",
        "//pb/test_status:go_default_library",
        "//pkg/summarizer/analyzers:go_default_library",
        "//pkg/summarizer/common:go_default_library",
        "//util/gcs:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
        "@org_golang_google_api//googleapi:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//pkg/summarizer/analyzers:all-srcs",
        "//pkg/summarizer/common:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "flakiness_test.go",
        "summary_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//internal/result:go_default_library",
        "//pb/config:go_default_library",
        "//pb/state:go_default_library",
        "//pb/summary:go_default_library",
        "//pb/test_status:go_default_library",
        "//pkg/summarizer/analyzers:go_default_library",
        "//pkg/summarizer/common:go_default_library",
        "//util/gcs:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
        "@org_golang_google_protobuf//testing/protocmp:go_default_library",
    ],
)
