load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "persist.go",
        "pubsub.go",
        "tabstate.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/testgrid/pkg/tabulator",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "//config/snapshot:go_default_library",
        "//pb/config:go_default_library",
        "//pkg/pubsub:go_default_library",
        "//pkg/updater:go_default_library",
        "//util/gcs:go_default_library",
        "//util/metrics:go_default_library",
        "//util/queue:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
        "@org_bitbucket_creachadair_stringset//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "pubsub_test.go",
        "tabstate_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/pubsub:go_default_library",
        "//util/gcs:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
