load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "inflate.go",
        "updater.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/testgrid/pkg/updater",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "//internal/result:go_default_library",
        "//metadata:go_default_library",
        "//metadata/junit:go_default_library",
        "//pb/config:go_default_library",
        "//pb/state:go_default_library",
        "//util/gcs:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
        "@ml_vbom_util//sortorder:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "inflate_test.go",
        "updater_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//metadata/junit:go_default_library",
        "//pb/state:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
