load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "eval.go",
        "gcs.go",
        "inflate.go",
        "persist.go",
        "pubsub.go",
        "read.go",
        "updater.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/testgrid/pkg/updater",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "//config/snapshot:go_default_library",
        "//internal/result:go_default_library",
        "//metadata:go_default_library",
        "//metadata/junit:go_default_library",
        "//pb/config:go_default_library",
        "//pb/custom_evaluator:go_default_library",
        "//pb/state:go_default_library",
        "//pb/test_status:go_default_library",
        "//pkg/pubsub:go_default_library",
        "//util/gcs:go_default_library",
        "//util/metrics:go_default_library",
        "//util/queue:go_default_library",
        "@com_github_fvbommel_sortorder//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "eval_test.go",
        "gcs_test.go",
        "inflate_test.go",
        "persist_test.go",
        "pubsub_test.go",
        "read_test.go",
        "updater_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//config:go_default_library",
        "//metadata:go_default_library",
        "//metadata/junit:go_default_library",
        "//pb/config:go_default_library",
        "//pb/custom_evaluator:go_default_library",
        "//pb/state:go_default_library",
        "//pb/test_status:go_default_library",
        "//pkg/pubsub:go_default_library",
        "//util/gcs:go_default_library",
        "//util/gcs/fake:go_default_library",
        "@com_github_fvbommel_sortorder//:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_google_cloud_go_pubsub//:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
        "@io_k8s_api//core/v1:go_default_library",
        "@org_golang_google_api//googleapi:go_default_library",
        "@org_golang_google_protobuf//testing/protocmp:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//pkg/updater/resultstore:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
