load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "gcs.go",
        "local_gcs.go",
        "read.go",
        "real_gcs.go",
        "sort.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/testgrid/util/gcs",
    visibility = ["//visibility:public"],
    deps = [
        "//metadata:go_default_library",
        "//metadata/junit:go_default_library",
        "//pb/state:go_default_library",
        "@com_github_fvbommel_sortorder//:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@org_golang_google_api//googleapi:go_default_library",
        "@org_golang_google_api//iterator:go_default_library",
        "@org_golang_google_api//option:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "gcs_test.go",
        "local_gcs_test.go",
        "read_test.go",
        "sort_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//metadata:go_default_library",
        "//metadata/junit:go_default_library",
        "//pb/state:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@org_golang_google_api//googleapi:go_default_library",
        "@org_golang_google_api//iterator:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//util/gcs/fake:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
