load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "persist.go",
        "queue.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/testgrid/util/queue",
    visibility = ["//visibility:public"],
    deps = [
        "//util/gcs:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "persist_test.go",
        "queue_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//util/gcs:go_default_library",
        "//util/gcs/fake:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
        "@org_golang_google_protobuf//testing/protocmp:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
